# CDA_Case2

./: README.md  case2reportTemplate.tex  main.py  pyproject.toml
data/: README.txt
src/: cca_analysis.py  config.py  delta_analysis.py  feature_importance.py  lda_analysis.py  loader.py  manifold_analysis.py  pca_analysis.py  permutation_test.py  preprocessing.py  questionnaire_analysis.py  role_analysis.py  round_analysis.py  trajectory_analysis.py
